# snake

./: CMakeLists.txt  README.md  food.hpp  main.cpp
.github/workflows/: build.yml
src/: CMakeLists.txt  food.cpp  food.hpp  game.cpp  game.hpp  main.cpp  snake.cpp  snake.hpp
